--- a/notebooks/next_steps.Rmd
+++ b/notebooks/next_steps.Rmd
@@ -15,6 +15,25 @@ output:
 - Implement function to calculate distance through GRASS
 - Implement function to calculate density through GRASS, using r.mfilter and r.resamp.filter
 
+- Appendix A: compare patterns (cum_inf vs nearest_inf) using focal and dist; 
+parameters to be decided.
+- Appendix B: compare patterns cum_inf vs log-dist.
+- Appendix C: show that cum dist and cum inf calculated through neighborhood analysis are 
+basically the same.
+- Appendix D: demonstration of the use of functions to calculate dist and cum inf in both 
+R and GRASS GIS. Explain how to download the package, which are the functions, the parameters and
+options/methods, and plot some results. (This might be a vignette of the package as well)
+(maybe separate results in R and GRASS in two different appendices?)
+
+- Testar influencia media vs distancia media entre pontos, para diferentes ZoI
+
+- Change names of the parameters for the functions, and name of functions
+  - input: x
+  - not scale, but zoi
+  - calc_inf_nearest
+  - calc_inf_cum
+  - calc_influence
+
 - ~~Implement exp decay distance~~ - OK!
 
 - ~~Calculate distance between points~~ - OK!
